# ethereal-synthesizer

./: CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
tests/: CMakeLists.txt
tests/source/: MidiProcessingTest.cpp
